  - #2256, _postgis_index_extent() for extent from index (Paul Ramsey)
  - #3176, Add ST_OrientedEnvelope (Dan Baston)

* Breaking Changes *
  - #3885, version number removed from address_standardize lib file
  - #3893, raster support functions can only be loaded in the same schema
           with core PostGIS functions.

* Enhancements and Fixes*
  - #3944, Update to EPSG register v9.2 (Even Rouault)
  - #3927, Parallel implementation of ST_AsMVT
  - #3925, Simplify geometry using map grid cell size before generating MVT
  - #3899, BTree sort order is now defined on collections of EMPTY and
           same-prefix geometries (Darafei Praliaskouski)
  - #3864, Performance improvement for sorting POINT geometries
           (Darafei Praliaskouski)
  - #3900, GCC warnings fixed, make -j is now working (Darafei Praliaskouski)
  - TopoGeo_addLinestring robustness improvements (Sandro Santilli)
    #1855, #1946, #3718, #3838
  - #3234, Do not accept EMPTY points as topology nodes (Sandro Santilli)
  - #1014, Hashable geometry, allowing direct use in CTE signatures (Paul Ramsey)
  - #3097, Really allow MULTILINESTRING blades in ST_Split() (Paul Ramsey)
  - #3942, geojson: Do not include private header for json-c >= 0.13 (Björn Esser)
  - #3954, ST_GeometricMedian now supports point weights (Darafei Praliaskouski)
  - #3965, ST_ClusterKMeans used to lose some clusters on initialization
           (Darafei Praliaskouski)
  - #3971, ST_ClusterKMeans now uses better initial seed (Darafei Praliaskouski)
  - #3977, ST_ClusterKMeans is now faster and simpler (Darafei Praliaskouski)
  - #3982, ST_AsEncodedPolyline supports LINESTRING EMPTY and MULTIPOINT EMPTY
           (Darafei Praliaskouski)
  - #3986, ST_AsText now has second argument to limit decimal digits 
           (Marc Ducobu, Darafei Praliaskouski)

PostGIS 2.4.0
2017/09/30

 * New Features *
  - #3822, Have postgis_full_version() also show and check version of