@@ -16,6 +16,8 @@ PostGIS 2.5.0
            with core PostGIS functions.
 
 * Enhancements and Fixes*
+  - #4020, Casting from box3d to geometry now returns correctly connected
+           PolyhedralSurface
   - #3944, Update to EPSG register v9.2 (Even Rouault)
   - #3927, Parallel implementation of ST_AsMVT
   - #3925, Simplify geometry using map grid cell size before generating MVT
